--- a/mod2_solution/Stylesheet.css
+++ b/mod2_solution/Stylesheet.css
@@ -1,5 +1,9 @@
 * {
- 	border-sizing: borderbox;
+ 	box-sizing: border-box;
+ }
+
+ body {
+ 	margin:0;
  }
 
 h1 {
@@ -7,66 +11,65 @@ h1 {
 	text-align: center;
 }
 
-
-
 div {
-	margin: 5px;
-	display: block;
+	clear: both;
 }
 
+
 section {
-	border: 1px solid black;
+	border: 1px;
+	padding: 10px;
 	margin-right: 5px;
-	padding: 5px;
+	margin-bottom: 5px;
 	background-color: #7a4e30;
-	float: left;
-	overflow: auto;
 }
 
 p {
-
-	font-family: arial;
-	text-decoration: none;
-	
+	overflow: auto;
+	clear: both;
 }
+
 
 #p1 {
-	border: 1px solid black;
 	background-color: #00ff00;
-	text-align: center;
-	width: 70px;
-	height: 30px;
-	margin-bottom: 15px;
-	position: relative;
-	top: 0;
-	right: 0;
-}
-#p2 {
+	width: 80px;
+	height: 25px;
 	border: 1px solid black;
-	background-color: #f2ff00;
+	font-family: arial;
+	text-decoration: none;
 	text-align: center;
-	width: 70px;
-	height: 30px;
-	margin-bottom: 15px;
-	position: relative;
-	top: 0;
-	right: 0;
+	float: right;
+
 }
-#p3 {
-	border: 1px black;
-	background-color: #ff6600;
+
+#p2 {
+	background-color: #f2ff00;
+	width: 80px;
+	height: 25px;
+	border: 1px solid black;
+	font-family: arial;
+	text-decoration: none;
 	text-align: center;
-	width: 70px;
-	height: 30px;
-	margin-bottom: 15px;
-	position: relative;
-	top: 0;
-	right: 0;
+	float: right;
+
+}
+
+#p3 {
+	background-color: #ff6600;
+	width: 80px;
+	height: 25px;
+	border: 1px solid black;
+	font-family: arial;
+	text-decoration: none;
+	text-align: center;
+	float: right;
+
 }
 
 
 .row {
 	width: 100%;
+	margin: 20px;
 }
 
 @media (min-width: 992px) {
@@ -75,14 +78,15 @@ p {
 		border: 1px solid black;
 	}
 	.col-lg-1 {
-		width: 33.33%;
+		width: 32%;
 	}
 	.col-lg-2 {
-		width: 33.33%;
+		width: 32%;
 	}
 	.col-lg-3 {
-		width: 33.33%;
+		width: 32%;
 	}
+	
 }
 	
 @media (max-width: 991px) and (min-width: 768px) {
@@ -91,28 +95,29 @@ p {
 			border: 1px solid black;
 		}
 		.col-md-1 {
-			width: 50%;
-		}
+			width: 49%;
+	}
 		.col-md-2 {
-			width: 50%;
-		}
+			width: 49%;
+	}
 		.col-md-3 {
-			width: 100%
-		}
+			width: 99%
+	}
+		
 }
 
 @media (max-width: 767px) {
 	.col-sm-1, .col-sm-2, .col-sm-3 {
 		float: left;
 		border: 1px solid black;
-	}
+	} 
 	.col-sm-1 {
-		width: 100%;
+		width: 99%;
 	}
 	.col-sm-2 {
-		width: 100%;
+		width: 99%;
 	}
 	.col-sm-3 {
-		width: 100%;
+		width: 99%;
 	}
 }
